// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagGallery component TagGallery empty snapshot 1`] = `
<div>
  <div
    class="gallery"
  >
    <div
      class="widget addTagWidget"
    >
      <button
        class="body theme_light focusButton"
      >
        +
      </button>
    </div>
    <div
      class="Bar pagination"
    >
       
       
       
      <button
        class="body theme_light"
      >
        Вперёд
      </button>
       
    </div>
  </div>
</div>
`;

exports[`TagGallery component TagGallery fillfull snapshot 1`] = `
<div>
  <div
    class="gallery"
  >
    <div
      class="widget addTagWidget"
    >
      <button
        class="body theme_light focusButton"
      >
        +
      </button>
    </div>
    <div
      class="tagContainer"
    >
      <div
        class="body theme_light"
      >
        <div>
          tag0
        </div>
        <div
          class="freq freq_theme_light"
        >
          99
        </div>
      </div>
      <button
        class="body theme_light removeTagButton"
      >
        x
      </button>
    </div>
    <div
      class="tagContainer"
    >
      <div
        class="body theme_light"
      >
        <div>
          tag1
        </div>
        <div
          class="freq freq_theme_light"
        >
          1
        </div>
      </div>
      <button
        class="body theme_light removeTagButton"
      >
        x
      </button>
    </div>
    <div
      class="tagContainer"
    >
      <div
        class="body theme_light"
      >
        <div>
          tag2
        </div>
        <div
          class="freq freq_theme_light"
        >
          205
        </div>
      </div>
      <button
        class="body theme_light removeTagButton"
      >
        x
      </button>
    </div>
  </div>
</div>
`;
